# databricks-dataplay-bundles

./: .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml
.github/workflows/: bundle-deploy.yml  bundle-validate.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
configuration/: catalogs.yml
docs/handson/: 01-azure-prereq.md  02-bundle-setup.md  03-cicd-deploy.md
docs/reference/: azure-sp-oidc-federation.md  databricks-asset-bundles.md
resources/: __init__.py  example_job.yml
resources/jobs/: wikimedia_recentchanges.py  wikimedia_recentchanges.yml
specs/001-wikimedia-changes-ingest/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-wikimedia-changes-ingest/checklists/: requirements.md
specs/001-wikimedia-changes-ingest/contracts/: bronze-file-layout.md  mediawiki-recentchanges-request.md
src/: example.py
src/dataplay/: __init__.py
src/dataplay/jobs/: __init__.py  wikimedia_recentchanges.py
src/dataplay/wikimedia/: __init__.py  config.py  pipeline.py  source.py  window.py  writer.py
tests/: conftest.py
tests/integration/: test_source.py  test_writer.py
tests/unit/: test_jobs_entry.py  test_pipeline.py  test_window.py
