[project]
name = "dataplay-bundles"
version = "0.1.0"
description = "Databricks Asset Bundle 기반 Lakeflow Job 코드베이스 (wikimedia-dataplay)"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32,<3",
    "pydantic>=2.7,<3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "black>=24",
    "responses>=0.25",
    "databricks-bundles>=1.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/dataplay"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
